# liteclaw

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: README.md  api.md  arquitetura.md  canais.md  configuracao.md  gateway.md  guia-rapido.md  instalacao.md  skills.md  tools.md
examples/: agent_with_skills.py  chat_with_tools.py
liteclaw/: __init__.py  agent.py  cli.py  client.py  session.py  skills.py  tools.py  tools_builtin.py
liteclaw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
liteclaw/bundled_skills/example/: SKILL.md
liteclaw/channels/: __init__.py  base.py  discord.py  telegram.py  webchat.py
liteclaw/gateway/: __init__.py  http_server.py  protocol.py  queue.py  server.py
liteclaw/web/: app.js  index.html
scripts/: install.ps1  install.sh
